# nexus_audit_v3

./: .gitignore  .nexus_fix_queue.json  .nexus_secret  .settings.json  CODE_IMPLEMENTATION.md  COMPLETE_CHECKLIST.md  CRITICAL_FINDINGS_IMPLEMENTATION.md  DEBUG_INSTRUCTIONS.md  DEBUG_RUN.sh  DIAGNOSTIC_REPORT.md  IMPLEMENTATION_CONFIRMED.md  IMPLEMENTATION_PLAN_CORRECTED.md  IMPLEMENTATION_VERIFICATION.md  INTEGRATION_JOURNAL.md  MCP_SPECIFICATION_V2.md  README.md  VERIFICATION_SUMMARY.md  add_coverage_tests.py  add_rules_tests.py  add_scoring_tests.py  audit_data_complete.json  audit_new.json  check_tools.py  cli.py  cli_reference.md  conftest.py  default_rules.yaml  migrate_enum_format.py  orchestrator.py  pyproject.toml  pytest.ini  s.md  server.py  settings.example.json  test_cmd_layer.py  test_keys.py  test_tmp.py  test_tools.py  verify_output.py  verify_primitives.py  (+1 more)
SPCES/: SUMMARY.md
SPECS/: LEGACY_FEATURE_INTEGRATION_PLAN.md  ROADMAP.md  SESSION_HANDOVER.md  SESSION_HANDOVER_MCP_SQLITE.md  WORKFLOW.md
api/: __init__.py  middleware.py  routes_ai.py  routes_config.py  routes_data.py  routes_project.py  routes_run.py  routes_settings.py  routes_stream.py  server.py
core/: __init__.py  architecture_analyzer.py  ast_parser.py  atomic.py  config_loader.py  events.py  file_discovery.py  language_detection.py  models.py  python_exe.py  registry.py  security.py  settings.py  tool_resolver.py
doc/: FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_CONFIRMATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REVIEW.md  SPEC_REVIEW_SUMMARY.md  TECHNICAL_SPEC.md
docs/: AUDITOR_STANDING_INSTRUCTIONS.md  BRANCH_AUDIT_REPORT.md  CONFIGURATION.md  INTEGRATION_JOURNAL.md  JOB_HISTORY_SORT_FIX.md  MCP_GAPS_TRIAGE.md  NEXUS_COMPARISON_REPORT.md:Zone.Identifier  NEXUS_NEW_DESIGN_SYSTEM.md:Zone.Identifier  PHASE1_2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PLAN_MCP_A_infrastructure_repairs.md  PLAN_MCP_B_data_quality.md  PLAN_MCP_C_new_tools.md  PLUGINS.md  PROJECT_STATE.md  RESEARCH_integration_agent_mcp_items.md
frontend/: index.html
legacy/: README.md  audit_data_complete.json  audit_report.md  auto_ignore.py  default_rules.yaml  diagnostic_test.py  fix_mypy.py  fix_typing.py  orchestrator.py  proper_fix.py  server.py  settings.temp.json  (+6 more)
(+288 files in other folders)
