[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "plugins", "tests"]

[project]
name = "nexus-audit-v3"
version = "0.1.0"
description = "Security and quality audit tool for Python projects"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8",
    "aiofiles>=23.0",
    "jsonschema>=4.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.scripts]
nexus-audit = "server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
